2007-12-12  John W. Eaton  <jwe@octave.org>

	* graphics.h.in (class axes) Add the layer property.
	* graphics.cc (class axes) Ditto.

	* graphics.cc (gh_manager::get_handle): Use ceil instead of trunc.

2007-12-11  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.19+.

2007-12-11  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.19.
	(OCTAVE_API_VERSION): Now api-v31.
	(OCTAVE_RELEASE_DATE): Now 2007-12-11.

	* graphics.cc (make_graphics_object):
	If successful, call __request_drawnow__.

	* input.cc (Vgud_mode): New static variable.
	(F__gud_mode__): New function.
	(get_user_input): If debug and Vgud_mode, print location info in
	format for Emacs GUD mode.

2007-12-11  David Bateman  <dbateman@free.fr>

	* OPERATORS/op-bm-sbm.cc, OPERATORS/op-b-sbm.cc, 
	OPERATORS/op-cm-scm.cc, OPERATORS/op-cm-sm.cc, 
	OPERATORS/op-cs-scm.cc, OPERATORS/op-cs-sm.cc, 
	OPERATORS/op-m-scm.cc, OPERATORS/op-m-sm.cc, 
	OPERATORS/op-s-scm.cc, OPERATORS/op-s-sm.cc: Privilege 
	conversion to dense matrices for compatibility.

	* DLD-FUNCTIONS/sparse.cc (FSparse): Remove the mutate flag, as
	default bahavior is now to keep matrix sparse always.
	
	* graphics.cc (axes::properties::properties):
	Initialize xcolor, ycolor, and zcolor to (0, 0, 0).

	* graphics.h.in (gh_manager::next_handle): Now double.
	* graphics.cc (gh_manager::get_handle, gh_manager::gh_manager):
	Set fractional part of next_handle to a random value.

2007-12-10  John W. Eaton  <jwe@octave.org>

	* ov-cell.cc (octave_cell::all_strings): Handle empty elements.
	Handle N-d cell arrays.

	* DLD-FUNCTIONS/fsolve.cc (Ffsolve):
	For compatibility, return [x, fval, info] instead of [x, info, msg].
 	Move tests here from test/test_nonlin.m.

	* OPERATORS/op-cm-s.cc: Define function for el_mul with
	DEFNDBINOP_OP, not DEFBINOP_OP.

	* OPERATORS/op-s-cm.cc: Define functions for el_and and el_or
	operators with DEFNDBINOP_FN.

	* oct-hist.cc (default_history_file): Use file_ops::concat.